tests/machine/x/ocaml/list_nested_assign.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/list_nested_assign.ml", line 4, characters 12-13:
4 |   matrix := 5
                ^
Error: This expression has type int
       This is not a function; it cannot be applied.


Context (around line 4):
   2 | 
   3 | let () =
   4 |   matrix := 5
   5 |   print_endline List.nth List.nth !matrix 1 0
   6 | 
